--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,11 +23,16 @@
       <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-      <a href="https://sava-anti-ddos.github.io/docs/">
+      <a href="https://github.com/sava-anti-ddos">
         <img alt="sava-anti-ddos"
           src="https://github.com/sava-anti-ddos/sava-anti-ddos.github.io/raw/gh-pages/docs/savd.png" 
-          style="margin: 0 0 0 0; border:0px; padding: 0; -webkit-box-shadow: none; position: absolute;
-                         right: 8px; bottom: 30px;" width="67" height="20">
+          style="margin: 0 0 0 0; border:0px; padding: 0; 
+          -webkit-box-shadow: none; 
+          position: absolute;
+          right: 8px; 
+          bottom: 30px;" 
+          width="80" 
+          height="80">
       </a>
 
       {% if site.show_downloads %}
